# k8s-deploy/docs/swagger.yaml
@@ -296,38 +296,6 @@ paths:
       summary: List all historical Charts
       tags:
       - Chart
-    patch:
-      parameters:
-      - description: Authentication header
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Success
-          schema:
-            allOf:
-            - $ref: '#/definitions/api.JSONResult'
-            - properties:
-                data:
-                  $ref: '#/definitions/modules.HelmChart'
-              type: object
-        "401":
-          description: Unauthorized operation
-          schema:
-            $ref: '#/definitions/api.JSONERRORResult'
-        "500":
-          description: Internal server error
-          schema:
-            $ref: '#/definitions/api.JSONERRORResult'
-      security:
-      - ApiKeyAuth: []
-      summary: List all historical Charts
-      tags:
-      - Chart
     post:
       parameters:
       - description: Cluster Chart
